# reasoning-mashup

./: .env.sample  .gitignore  LICENSE  Procfile  README.md  architecture.puml  pyproject.toml  setup.py  test-ollama.py
api/: .env.sample  main.py  main_ollama.py  proxy_config.py  requirements.txt  research_workflow.py  sales_qualification_workflow.py  simple_flow.py
frontend/: __init__.py  app.py  requirements.txt
