[project]
name = "reasoning-mashup"
version = "0.1.0"
description = "A powerful AI reasoning chain CLI tool that combines local and cloud models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.44.0",
    "colorama>=0.4.6",
    "openai>=1.59.9",
    "prompt-toolkit>=3.0.50",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[project.scripts]
mashup = "rat.claude:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rat"]
